# seedling

./: .gitignore  .rules  AGENTS.md  Cargo.toml  Containerfile.caddy  Containerfile.volume-shell  DEVELOP.md  README.md  bad-container.json  cliff.toml  draft-beset.rhai  draft-seedling.rhai  justfile  release-plz.toml
crates/core/: Cargo.toml
crates/core/src/: defs.rs  grove.rs  lib.rs  oi.rs  runtime.rs  sysconst.rs  system.rs  tests.rs  transport.rs
crates/core/src/defs/: action.rs  app.rs  collection.rs  container.rs  deployment.rs  enums.rs  export.rs  ingress.rs  install.rs  job.rs  param.rs  pod.rs  resource.rs  service.rs  summary.rs  volume.rs
crates/core/src/defs/app/: action.rs  collection.rs  deployment.rs  install.rs  job.rs  param.rs  service.rs  shell.rs  volume.rs
crates/core/src/defs/collection/: bag.rs  collectable.rs  handle.rs  selector.rs
crates/core/src/defs/container/: tests.rs
crates/core/src/defs/summary/: tests.rs
crates/core/src/grove/: db.rs  publish.rs  state.rs
crates/core/src/oi/: auth.rs  forwards.rs  handler.rs  logs.rs  server.rs  shells.rs  state.rs  test_support.rs
crates/core/src/oi/forwards/: handler.rs  registry.rs  session.rs
crates/core/src/oi/handler/: actions.rs  appdef_json.rs  apps.rs  backups.rs  canopy.rs  faults.rs  grove.rs  images.rs  ingresses.rs  key_mgmt.rs  params.rs  registries.rs  services.rs  status.rs  templates.rs  tls.rs  volumes.rs
crates/core/src/oi/shells/: handler.rs  registry.rs  session.rs  volume_session.rs
crates/core/src/runtime/: action_params.rs  apps.rs  audit.rs  autonomous_ops.rs  backup_apps.rs  backup_execution.rs  backup_strategies.rs  barrier.rs  canopy.rs  db.rs  desired.rs  external_service_mappings.rs  external_volume_mappings.rs  faults.rs  gc.rs  generations.rs  history.rs  identity.rs  images.rs  nat64_prefix.rs  probe.rs  registries.rs  registry.rs  restart_gens.rs  scaling.rs  scheduler.rs  schedules.rs  secrets.rs  site_ingress_attachments.rs  site_ingresses.rs  site_services.rs  site_volumes.rs  stopped.rs  tailscale.rs  templates.rs  tls.rs
crates/core/src/runtime/apps/: params.rs  registry_faults.rs  secret_params.rs  tests.rs
crates/core/src/runtime/barrier/: action_call.rs  cancel.rs  oracle.rs  replay.rs  runtime.rs  shell.rs
crates/core/src/runtime/canopy/: tests.rs
crates/core/src/runtime/db/: tests.rs
crates/core/src/runtime/desired/: tests.rs
crates/core/src/runtime/external_volume_mappings/: tests.rs
crates/core/src/runtime/faults/: tests.rs
crates/core/src/runtime/generations/: tests.rs
crates/core/src/runtime/history/: tests.rs
crates/core/src/runtime/registry/: tests.rs
crates/core/src/runtime/restart_gens/: tests.rs
crates/core/src/runtime/scheduler/: tests.rs
crates/core/src/runtime/site_services/: resolve.rs  resolver.rs
crates/core/src/runtime/site_volumes/: tests.rs
crates/core/src/runtime/stopped/: tests.rs
crates/core/src/runtime/tls/: acme.rs  dns.rs  expiring.rs  issuance.rs  keypair.rs  parse.rs  renewal.rs  serve.rs  state.rs  store.rs  tailscale_issuer.rs  validate.rs
crates/core/src/system/: actuator.rs  breadcrumb.rs  caddy.rs  data_plane.rs  jool.rs  journal.rs  nat64.rs  netinfo.rs  observer.rs  podman.rs  reconcile.rs  resolver.rs  stub.rs  systemd.rs  types.rs  unavailable.rs  volume_store.rs
crates/core/src/system/actuator/: pod.rs  pull.rs
crates/core/src/system/caddy/: cert_observation.rs  config.rs  proxy.rs  startup.rs  tests.rs
crates/core/src/system/data_plane/: nft.rs  routes.rs  tests.rs
crates/core/src/system/reconcile/: faults.rs  images.rs  phases.rs  pods.rs  proxy.rs  routes.rs  rules.rs  site_proxy.rs  state.rs  volumes.rs
crates/core/src/system/resolver/: config.rs  forwarder.rs  startup.rs
crates/core/src/system/translate/: container.rs  proxy.rs
crates/core/src/tests/: action.rs  action_call.rs  app.rs  barrier.rs  bsl.rs  constants.rs  container.rs  deployment.rs  description.rs  exec.rs  ingress.rs  job.rs  param.rs  pod.rs  runtime.rs  service.rs  volume.rs
crates/core/src/transport/: auth.rs  endpoint.rs  state.rs
crates/ctl/: Cargo.toml
crates/ctl/src/: apps.rs  backups.rs  canopy.rs  client.rs  forward.rs  ingresses.rs  logs.rs  main.rs  op.rs  services.rs  shell.rs  subscribe.rs  templates.rs  tls.rs  volumes.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: main.rs
crates/protocol/: Cargo.toml
crates/protocol/fuzz/: Cargo.toml
crates/protocol/fuzz/fuzz_targets/: wire_decode.rs
crates/protocol/src/: actor.rs  backup_actions.rs  client.rs  env.rs  error.rs  events.rs  grove.rs  keys.rs  lib.rs  names.rs
crates/protocol/src/events/: tests.rs
crates/spikes/: Cargo.toml
crates/spikes/src/: lib.rs
crates/web/: Cargo.toml  build.rs
crates/web/frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
crates/web/frontend/e2e/: fixture.ts  playwright.config.ts  test-fixtures.ts
crates/web/frontend/e2e/tests/: apps.spec.ts  connect.spec.ts  daemon-retry.spec.ts  events-sidebar.spec.ts  navigation.spec.ts  safety-mode-clock.spec.ts  safety-mode.spec.ts  sessions.spec.ts  smoke.spec.ts
crates/web/frontend/src/: App.tsx  main.tsx  theme.ts
crates/web/frontend/src/components/: ActionButton.test.tsx  ActionButton.tsx  ErrorPage.test.tsx  ErrorPage.tsx  EventsSidebar.test.tsx  EventsSidebar.tsx  ImageReferences.test.tsx  ImageReferences.tsx  MapVolumeDialog.test.tsx  MapVolumeDialog.tsx  Markdown.test.tsx  Markdown.tsx  Navbar.test.tsx  Navbar.tsx  Offline.test.tsx  Offline.tsx  OiErrorAlert.test.tsx  OiErrorAlert.tsx  PlanDiff.test.tsx  PlanDiff.tsx  PromoteSnapshotDialog.test.tsx  PromoteSnapshotDialog.tsx  ProtectedRoute.test.tsx  ProtectedRoute.tsx  SafetyModeProvider.test.tsx  SafetyModeProvider.tsx  SafetyModeSwitcher.test.tsx  SafetyModeSwitcher.tsx  ScriptEditor.tsx  (+8 more)
crates/web/src/: actor_activity.rs  auth.rs  config.rs  daemon.rs  event_broker.rs  http.rs  interfaces.rs  main.rs  proxy.rs  shell.rs  spa.rs  state.rs  web_sessions.rs  wt.rs  wt_cert.rs
crates/web/src/auth/: password.rs  tailscale.rs
src/: ctl.rs  (+7 more)
(+399 files in other folders)
