[workspace]
resolver = "3"
members = ["crates/protocol", "crates/core", "crates/daemon", "crates/ctl"]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
dirs = "5.0.1"
ed25519-dalek = { version = "2.2.0", features = ["pkcs8", "rand_core"] }
futures-util = { version = "0.3.32", default-features = false, features = ["io", "channel"] }
ipnet = "2.12.0"
jiff = { version = "0.2.23", features = ["serde"] }
lloggs = "1.4.0"
parking_lot = "0.12.5"
quinn = "0.11.9"
rand_core = "0.6"
reqwest = { version = "0.13.2", features = ["json"] }
rustls = "0.23.37"
rustls-pki-types = "1.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
snafu = "0.9.0"
subtle = "2.6.1"
tokio = { version = "1.51.0", features = ["full"] }
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
uuid = { version = "1.23.0", features = ["v4", "serde", "v5"] }
wildmatch = "2.6.1"

[patch.crates-io]
smartstring = { git = "https://github.com/bodil/smartstring", rev = "refs/pull/34/head" }
