[workspace]
resolver = "3"
members = ["crates/protocol", "crates/core", "crates/daemon", "crates/ctl", "crates/web"]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
argon2 = "0.5.3"
axum = "0.8.9"
mime_guess = "2.0.5"
rust-embed = "8.11.0"
toml = "1.1.2"
tower-http = { version = "0.6.8", features = ["set-header"] }
wtransport = "0.7.0"
clap = { version = "4.6.0", features = ["derive"] }
if-addrs = "0.15.0"
crossterm = "0.29.0"
dirs = "5.0.1"
ed25519-dalek = { version = "2.2.0", features = ["pkcs8", "rand_core"] }
futures-util = { version = "0.3.32", default-features = false, features = ["io", "channel"] }
ipnet = "2.12.0"
jiff = { version = "0.2.23", features = ["serde"] }
lloggs = "1.4.0"
parking_lot = { version = "0.12.5", features = ["deadlock_detection"] }
quinn = "0.11.9"
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.13.2", features = ["json"] }
rustls = "0.23.37"
rustls-pki-types = "1.14.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
sha2 = "0.11.0"
snafu = "0.9.0"
subtle = "2.6.1"
tokio = { version = "1.51.0", features = ["full"] }
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
uuid = { version = "1.23.0", features = ["v4", "serde", "v5"] }
whoami = "2.1.1"
wildmatch = "2.6.1"

[patch.crates-io]
smartstring = { git = "https://github.com/bodil/smartstring", rev = "refs/pull/34/head" }

[profile.dev]
frame-pointers = "force-on"

[profile.release]
debug = true
frame-pointers = "force-on"
