[package]
name = "seedling-core"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
seedling-protocol = { path = "../protocol", features = ["rusqlite"] }

arc-swap = "1.9.1"
clap.workspace = true
cronexpr = "1.5.0"
ed25519-dalek.workspace = true
futures-util.workspace = true
ipnet.workspace = true
jiff.workspace = true
libc = "0.2.184"
nftables = { version = "0.6.3", features = ["tokio"] }
nix = { version = "0.31.3", features = ["signal", "term"] }
parking_lot.workspace = true
podman-rest-client = { version = "0.13.0", features = ["uds"] }
quinn.workspace = true
rand_core.workspace = true
reqwest.workspace = true
rhai = { version = "1.25.1", features = ["metadata"] }
rtnetlink = "0.21.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
rustix = { version = "1.1.4", features = ["fs", "process"] }
rustls.workspace = true
rustls-pki-types.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
snafu.workspace = true
subtle.workspace = true
systemd = "0.10.1"
tempfile = "3.27.0"
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
wildmatch.workspace = true
zbus = { version = "5.16.0", features = ["tokio"] }
zxcvbn = "3.1.1"
whoami.workspace = true
orion = "0.17.15"
secrecy = "0.10.3"
instant-acme = { version = "0.8.5", features = ["time"] }
rcgen = "0.14.8"
pem = "3.0.6"
x509-parser = "0.18.1"
aws-sdk-route53 = "1.111.0"
aws-config = "1.8.16"
aws-credential-types = "1.2.14"
axum.workspace = true
iana-time-zone = "0.1.65"
hickory-resolver = { version = "0.26.1", default-features = false, features = ["system-config", "tokio"] }
bestool-canopy = "0.7.0"
algae-cli = "1.1.6"
base64 = "0.22.1"
p256 = { version = "0.13.2", features = ["ecdsa", "pkcs8", "pem"] }
futures = { version = "0.3.32", default-features = false, features = ["executor"] }

[dev-dependencies]
time = "0.3.47"
