[package]
name = "seedling-ctl"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "seedling-ctl"
path = "src/main.rs"

[dependencies]
seedling-protocol = { path = "../protocol" }

clap.workspace = true
crossterm.workspace = true
dirs.workspace = true
futures-util.workspace = true
lloggs.workspace = true
quinn.workspace = true
rustls.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
whoami.workspace = true
