[package]
name = "seedling-protocol"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
dirs.workspace = true
ed25519-dalek.workspace = true
futures-util.workspace = true
jiff.workspace = true
quinn.workspace = true
rand_core.workspace = true
rusqlite = { version = "0.39.0", features = ["bundled"], optional = true }
rustls.workspace = true
rustls-pki-types.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
tokio.workspace = true
tracing.workspace = true

[features]
rusqlite = ["dep:rusqlite"]
