[package]
name = "seedling-protocol"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
compact_str = { version = "0.9.1", features = ["serde"] }
dirs.workspace = true
ed25519-dalek.workspace = true
futures-util.workspace = true
hex = { version = "0.4.3", features = ["serde"] }
jiff.workspace = true
quinn.workspace = true
rand_core.workspace = true
rusqlite = { version = "0.40.1", features = ["bundled"], optional = true }
rustls.workspace = true
rustls-pki-types.workspace = true
serde.workspace = true
serde_jcs = "0.2.0"
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[features]
rusqlite = ["dep:rusqlite"]

[dev-dependencies]
tempfile = "3.27.0"
