[package]
name = "seedling-web"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "seedling-web"
path = "src/main.rs"

[dependencies]
seedling-protocol = { path = "../protocol" }

argon2.workspace = true
axum.workspace = true
mime_guess.workspace = true
clap.workspace = true
if-addrs.workspace = true
jiff.workspace = true
lloggs.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
rust-embed.workspace = true
wtransport.workspace = true
